--- a/index.html
+++ b/index.html
@@ -1,25 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test function</title>
 </head>
+
 <body>
     <button id="change">Set other value</button>
     <div class="_variableAssambledDemo"></div>
 
     <div class="_creatorName"></div>
     <div class="_bindingVariable"></div>
-    
+
     <input _bind="_bindingVariable">
 
 </body>
 <script type="module" src="./demo.js"></script>
 <script>
-document.addEventListener('event_variableForTesting', ()=>{console.log('event')})
+    document.addEventListener('event_bindingVariable', () => { console.log('event') })
 
 
 </script>
+
 </html>
